fix spacing css

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,8 +16,13 @@ body {
 .master {
   height: 100vh;
   line-height: 1.3em;
-
   overflow-y: hidden;
-
   background-color: $board-bg-color;
+
+  color: $app-main-text-color;
+
+  .icon {
+    font-size: 14px;
+    margin-right: 3px;
+  }
 }
