--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -11,6 +11,7 @@ $board-content-height: calc(
 $common-elm-bg: rgba(255, 255, 255, 0.24);
 
 // Colors
+$app-main-text-color: #333;
 $board-bg-color: #0079bf;
 
 // Screens
