--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -30,4 +30,9 @@
     border: 1px dashed #abc;
     margin: 5px 5px 5px (0);
   }
+  .add-new-column {
+    width: 250px;
+    height: 32px;
+    line-height: 32px;
+  }
 }
